Update socket charging session
